--- a/views/designPatterns/structural/structural.html
+++ b/views/designPatterns/structural/structural.html
@@ -4,3 +4,9 @@
     <p>Many patterns are wrappers that mimic underlying class' interface</p>
     <p>Stress the importance of good API design</p>
 </div>
+
+
+
+
+<!-- Adapter -->
+<div w3-include-html="views/designPatterns/structural/adapter.html"></div>
