[Add] problem 11 solution

--- a/views/problems/problems.html
+++ b/views/problems/problems.html
@@ -7,6 +7,7 @@
 <div w3-include-html="views/problems/_7.html"></div>
 <div w3-include-html="views/problems/_8.html"></div>
 <div w3-include-html="views/problems/_9.html"></div>
+<div w3-include-html="views/problems/_11.html"></div>
 
 
 
