[Adds] Bridge, decorator, composit, fasade and flyweight pattern designs

--- a/views/designPatterns/structural/structural.html
+++ b/views/designPatterns/structural/structural.html
@@ -10,3 +10,18 @@
 
 <!-- Adapter -->
 <div w3-include-html="views/designPatterns/structural/adapter.html"></div>
+
+<!-- Bridge -->
+<div w3-include-html="views/designPatterns/structural/bridge.html"></div>
+
+<!-- Composit -->
+<div w3-include-html="views/designPatterns/structural/composit.html"></div>
+
+<!-- Decorator -->
+<div w3-include-html="views/designPatterns/structural/decorator.html"></div>
+
+<!-- Façade -->
+<div w3-include-html="views/designPatterns/structural/façade.html"></div>
+
+<!-- Flyweight -->
+<div w3-include-html="views/designPatterns/structural/flyweight.html"></div>
