Adds behavioral dessign patterns

--- a/views/designPatterns/behavioral/behavioral.html
+++ b/views/designPatterns/behavioral/behavioral.html
@@ -2,3 +2,39 @@
     <def1>Behavioral</def1>
     <p>They are all different; no central theme</p>
 </div>
+
+
+
+<!-- ChainOfResponsibility -->
+<div w3-include-html="views/designPatterns/behavioral/chainOfResponsibility.html"></div>
+
+<!-- command -->
+<div w3-include-html="views/designPatterns/behavioral/command.html"></div>
+
+<!-- interpreter -->
+<div w3-include-html="views/designPatterns/behavioral/interpreter.html"></div>
+
+<!-- iterator -->
+<div w3-include-html="views/designPatterns/behavioral/iterator.html"></div>
+
+<!-- mediator -->
+<div w3-include-html="views/designPatterns/behavioral/mediator.html"></div>
+
+<!-- memento -->
+<div w3-include-html="views/designPatterns/behavioral/memento.html"></div>
+
+<!-- observer -->
+<div w3-include-html="views/designPatterns/behavioral/observer.html"></div>
+
+<!-- state -->
+<div w3-include-html="views/designPatterns/behavioral/state.html"></div>
+
+<!-- strategy -->
+<div w3-include-html="views/designPatterns/behavioral/strategy.html"></div>
+
+<!-- templateMethod -->
+<div w3-include-html="views/designPatterns/behavioral/templateMethod.html"></div>
+
+<!-- visitor -->
+<div w3-include-html="views/designPatterns/behavioral/visitor.html"></div>
+
