--- a/views/designPatterns/structural/structural.html
+++ b/views/designPatterns/structural/structural.html
@@ -25,3 +25,6 @@
 
 <!-- Flyweight -->
 <div w3-include-html="views/designPatterns/structural/flyweight.html"></div>
+
+<!-- Proxy -->
+<div w3-include-html="views/designPatterns/structural/proxy.html"></div>
